--- a/src/script/style.css
+++ b/src/script/style.css
@@ -39,7 +39,7 @@ header {
 
     /* Itens do Menu */
 nav a {
-    padding: 44.5px 20px;
+    padding: 6.05vh 20px;
     color: var(--cor1);
     font-size: 1.3em;
     font-weight: bold;
@@ -77,7 +77,7 @@ nav .btnconta {
 
 nav .btnlogin:hover {
     background-color: var(--cor2);
-    border: 3px solid var(--cor1);
+    border-color: var(--cor1);
     color: white;
 }
 
@@ -111,8 +111,7 @@ nav .btnconta:hover {
     margin: 25px 0;
     width: 100%;
     height: 40px;
-    border-bottom: 1px solid var(--cinza);
-    
+    border-bottom: 1px solid var(--cinza);  
 }
 
 .input-box label {
