--- a/src/script/css/responsivo.css
+++ b/src/script/css/responsivo.css
@@ -13,10 +13,10 @@
         justify-content: space-between;
         align-items: center;
         position: fixed;
-        top: 109.5px;
+        top: 15vh;
         height: 6vh;
         background-color: var(--cor2);
-        padding: 0px 30px;
+        padding: 0px 30px;;
         /* background-color: rgba(255, 0, 0, 0.372); */
     }
 
@@ -24,8 +24,7 @@
         text-decoration: none;
         font-size: 1.3em;
         padding: 1.3vh 3vh;
-        font-weight: bold;
-        color: var(--cor0);
+        color: white;
         transition-duration: 0.3s;
     }
 
@@ -52,7 +51,7 @@
     .logo {width: 8vh;}
 
     .menu-pc-mobile.active {
-        top: 73px;
+        top: 10vh;
     }
 
     .alterna-botoes, .alterna-menu {
