--- a/src/script/css/style.css
+++ b/src/script/css/style.css
@@ -32,7 +32,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 60px;
+    padding: 0px 60px;
     width: 100%;
     height: 15%;
     background-color: var(--cor3);
@@ -85,24 +85,31 @@ nav a:hover {background-color: var(--cor4);}
 }
 
     /* Botões do Menu */
-nav .btnmenu {
+nav .btnmenu-pc {
     margin: -2.2px;
     padding: 5px;
     width: 80px;
     height: 110px;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 1em;
     color: white;
     background: transparent;
     transition-duration: 0.3s;
 }
 
-nav .btnmenu .iconbtn {font-size: 2em;}
+nav .btnmenu-pc .iconbtn {font-size: 2em;}
 
-nav .btnmenu:hover {
+nav .btnmenu-pc:hover {
     background-color: var(--cor4);
     color: var(--cor1);
+}
+
+nav .btnmenu-mobile {
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    top: 10vh;
 }
 
     /* Listas do Menu - Apenas quando passa o mouse por cima */
@@ -111,9 +118,11 @@ nav .btnmenu:hover {
     position: fixed;
     top: 15vh;
     border-radius: 0px 0px 7px 7px;
-    box-shadow: 2px 2px 2px var(--sombra);
+    box-shadow: 3px 3px 5px var(--sombra);
     background-color: var(--cor4);
 }
+
+.btnmenu-mobile .listamenu {top: 10vh;}
 
 .listamenu.btnconta {right: 26vh;}
 .listamenu.btnsuporte {right: 18.3vh;}
