--- a/src/script/css/style.css
+++ b/src/script/css/style.css
@@ -36,6 +36,8 @@ header {
     width: 100%;
     height: 15%;
     background-color: var(--cor3);
+    box-shadow: 0 3px 10px var(--sombra);
+    z-index: 3;
 }
 
 .logo {width: 10vh;}
@@ -82,6 +84,8 @@ nav a:hover {background-color: var(--cor4);}
 .menu-pc-mobile {
     display: none;
     width: 100%;
+    box-shadow: 0 2px 10px var(--sombra);
+    z-index: 2;
 }
 
     /* Botões do Menu */
@@ -120,6 +124,7 @@ nav .btnmenu-mobile {
     border-radius: 0px 0px 7px 7px;
     box-shadow: 3px 3px 5px var(--sombra);
     background-color: var(--cor4);
+    z-index: 4;
 }
 
 .btnmenu-mobile .listamenu {top: 10vh;}
@@ -173,6 +178,7 @@ nav .btnmenu-mobile {
     border: 0px solid var(--sombra);
     border-radius: 20px;
     box-shadow: 0 0 20px var(--sombra);
+    z-index: 1;
 }
 
 #caixa h1 {
