--- a/src/script/css/style.css
+++ b/src/script/css/style.css
@@ -65,6 +65,7 @@ header {
     display: none;
     width: 100%;
     box-shadow: 0px 2px 5px var(--sombra);
+    z-index: 2;
 }
 
 nav ion-icon.iconmenu {
@@ -322,28 +323,63 @@ nav .btnmenu-mobile {
     width: 90%;
     height: 60%;
     padding: 0px 60px;
-    border: 2px solid red;
 }
 
 #minha-conta h1 {
+    padding: 10px;
     font-size: 2.2em;
     color: var(--cor1);
 }
 
 .caixa-minha-conta, .caixa-compra {
-    width: 60vh;
+    display: flex;
+    flex-direction: column;
+    width: 50vh;
     text-align: center;
     height: 30vh;
     border-radius: 18px;
-    border: 3px solid var(--cor4);
+    border: 3px solid var(--cor5);
 }
 
-.caixa-minha-conta h2, .caixa-compra h2 {
+.caixa-compra {
+    justify-content: center;
+    align-items: center;
+    border: none;
+    font-size: 1.2em;
+    color: var(--cinza);
+}
+
+.caixa-compra ion-icon {font-size: 3em;}
+
+.caixa-minha-conta h2 {
     padding: 10px;
     background-color: var(--cor5);
     font-size: 1.3em;
     color: var(--cor2);
     border-radius: 15px 15px 0px 0px;
+}
+
+.conteudo-minhaconta {
+    margin-top: 20px;
+    flex-direction: column;
+    align-items: center;
+}
+
+.conteudo-minhaconta p {color: var(--cinza);}
+
+.btn-minhaconta {
+    width: 200px;
+    padding: 15px;
+    margin: 15px;
+    background-color: var(--cor3);
+    border: none;
+    border-radius: 13px;
+    cursor: pointer;
+}
+
+.btn-minhaconta a {
+    font-size: 1.3em;
+    font-weight: bold;
 }
 
 /* RODAPÉ */
