--- a/src/script/css/style.css
+++ b/src/script/css/style.css
@@ -36,7 +36,7 @@ header {
     align-items: center;
     padding: 0px 60px;
     width: 100%;
-    height: 13%;
+    height: 13vh;
     background-color: var(--cor3);
     box-shadow: 0 3px 10px var(--sombra);
     z-index: 3;
