--- a/src/script/css/style.css
+++ b/src/script/css/style.css
@@ -34,6 +34,8 @@
     src: url(../fontes/Wellingtons-Bold.otf);
 }
 
+html {scroll-behavior: smooth;}
+
 body {
     display: flex;
     flex-direction: column;
@@ -335,32 +337,76 @@ nav .btnmenu-mobile {
 .cad-login a:hover {color: var(--cor1);}
 
 /* PÁGINA INICIAL */
+    /* Catálogo */
 #catalogo {
-    margin-top: 35%;
+    text-align: center;
+    margin-top: 300%;
     border: 2px solid red;
 }
 
-.sobre-loja, #mais-vendidos {
+    /* Sobre a Loja */
+.sobre-loja, .produtos, .prod-destaque-direita, .prod-destaque-esquerda {
     width: 95%;
     margin-top: 5vh;
-    border: 2px solid red;
 }
 
-.sobre-loja, #mais-vendidos {padding: 20px;}
-
-.sobre-loja h1, #mais-vendidos h1 {
-    font-size: 3em;
+.sobre-loja h1, .produtos h1, .prod-destaque-direita h1, .prod-destaque-esquerda h1 {
+    font-size: 3.5em;
     color: var(--cor1);
 }
 
 .sobre-loja p {
     margin-top: 10px;
+    font-size: 1.2em;
     line-height: 1.5em;
 }
+    /* Mais Vendidos */
+.produtos {text-align: center;}
 
-#mais-vendidos {
-    text-align: center;
+    /* Produtos em Destaque */
+        /* Direita */
+.prod-destaque-direita {
+    display: flex;
+    justify-content: flex-end;
 }
+
+.prod-destaque-direita .pdd-texto {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.pdd-texto p {
+    margin-top: 30px;
+    width: 90%;
+    line-height: 1.5em;
+    font-size: 1.2em;
+}
+
+.prod-destaque-direita img {margin-left: 3vw;}
+
+        /* Esquerda */
+.prod-destaque-esquerda {
+    display: flex;
+    justify-content: flex-start;
+}
+
+.prod-destaque-esquerda .pdd-texto {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.pdd-texto p {
+    margin-top: 30px;
+    width: 90%;
+    line-height: 1.5em;
+    font-size: 1.2em;
+}
+
+.prod-destaque-esquerda img {margin-right: 3vw;}   
 
 /* ATRIBUTOS PARA PRODUTO */
 .produto {
@@ -371,7 +417,7 @@ nav .btnmenu-mobile {
     margin: 20px;
     width: 40vh;
     padding: 20px;
-    border: 2px solid blue;
+    box-shadow: 0 0 10px var(--sombra);
 }
 
 .preco {
@@ -381,7 +427,6 @@ nav .btnmenu-mobile {
 }
 
 .botoes-produto {
-    border: 2px solid green;
     padding: 0;
     display: flex;
     align-items: center;
@@ -394,6 +439,7 @@ nav .btnmenu-mobile {
 }
 
 .botoes-produto ion-icon {
+    cursor: pointer;
     font-size: 1.5em;
     color: var(--cinza);
 }
@@ -485,6 +531,20 @@ nav .btnmenu-mobile {
 .btn-index:hover, .btn-saibamais:hover, .btn-compra:hover, .btn-compra:hover {
     color: var(--cor3);
     background-color: var(--cor5);
+}
+
+/* VOLTAR AO TOPO */
+.voltar-topo {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    background-color: var(--cor5);
+}
+
+.voltar-topo a {
+    color: var(--cor2);
+    font-size: 1.1em;
+    font-family: texto-negrito;
 }
 
 /* RODAPÉ */
