--- a/src/script/css/style.css
+++ b/src/script/css/style.css
@@ -41,7 +41,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
 }
 
 h1 {font-family: titulo;}
@@ -338,17 +338,16 @@ nav .btnmenu-mobile {
 
 /* PÁGINA INICIAL */
     /* Catálogo */
-#catalogo {
-    text-align: center;
-    margin-top: 300%;
+#catalogo img {
+    max-width: 100%;
+    height: 100%;
+    margin-top: 15vh;
     border: 2px solid red;
 }
 
     /* Sobre a Loja */
-.sobre-loja, .produtos, .prod-destaque-direita, .prod-destaque-esquerda {
-    width: 95%;
-    margin-top: 5vh;
-}
+.sobre-loja, .produtos, .prod-destaque-direita, .prod-destaque-esquerda {margin-top: 5vh;}
+.prod-destaque-direita, .prod-destaque-esquerda, .sobre-loja {width: 88.5%;}
 
 .sobre-loja h1, .produtos h1, .prod-destaque-direita h1, .prod-destaque-esquerda h1 {
     font-size: 3.5em;
@@ -406,18 +405,25 @@ nav .btnmenu-mobile {
     font-size: 1.2em;
 }
 
-.prod-destaque-esquerda img {margin-right: 3vw;}   
+.prod-destaque-esquerda img {margin-right: 3vw;}
+
+.prod-destaque-direita img, .prod-destaque-esquerda img {box-shadow: 0 0 10px var(--sombra);}
 
 /* ATRIBUTOS PARA PRODUTO */
 .produto {
     display: inline-block;
     flex-direction: column;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin: 20px;
     width: 40vh;
     padding: 20px;
     box-shadow: 0 0 10px var(--sombra);
+}
+
+.produto img {
+    width: 100%;
 }
 
 .preco {
@@ -430,12 +436,7 @@ nav .btnmenu-mobile {
     padding: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-}
-
-.btn-compra {
-    position: relative;
-    left: 35px;
+    justify-content: center;
 }
 
 .botoes-produto ion-icon {
@@ -536,6 +537,7 @@ nav .btnmenu-mobile {
 /* VOLTAR AO TOPO */
 .voltar-topo {
     width: 100%;
+    margin-top: 10vh;
     padding: 10px;
     text-align: center;
     background-color: var(--cor5);
@@ -563,6 +565,7 @@ nav .btnmenu-mobile {
 #rodape h1 {
     color: var(--cor1);
     font-size: 1.1em;
+    font-family: texto-negrito;
 }
 
 #rodape li, a {
